[package]
name = "pyo3_util"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lint]
workspace = true

[dependencies]
pyo3.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { version = "0.29", features = ["fs"] }

scopeguard = "1"
thiserror = "1"

[build-dependencies]
pyo3-build-config = "*"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
