[package]
name = "edgeql-parser-python"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
rust-version = "1.65.0"
edition = "2021"

[dependencies]
edgeql-parser = { path = "..", features = ["serde"] }
bytes = "1.0.1"
num-bigint = "0.4.3"
bigdecimal = { version = "0.3.0", features = [ "string-only" ] }
blake2 = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.9.3"
once_cell = "1.18.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
bitcode = { version = "0.4.0", features = ["serde"] }

[dependencies.edgedb-protocol]
git = "https://github.com/edgedb/edgedb-rust"
features = ["with-num-bigint", "with-bigdecimal"]

[lib]
crate-type = ["lib", "cdylib"]
name = "edgeql_rust"
path = "src/lib.rs"
