[package]
name = "edgeql-parser-python"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/extension-module"]
default = ["python_extension"]

[dependencies]
pyo3 = { workspace = true, optional = true }

edgeql-parser = { path = "..", features = ["serde"] }
bytes = "1.0.1"
num-bigint = "0.4.3"
bigdecimal = { version = "0.4.5", features = ["string-only"] }
blake2 = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.4.0"
once_cell = "1.18.0"
bincode = { version = "1.3.3" }

[dependencies.edgedb-protocol]
git = "https://github.com/edgedb/edgedb-rust"
features = ["with-num-bigint", "with-bigdecimal"]

[lib]
crate-type = ["lib", "cdylib"]
name = "edgeql_rust"
path = "src/lib.rs"
