[package]
name = "rust_native"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/extension-module", "pyo3/serde"]

[dependencies]
pyo3 = { workspace = true }
pyo3_util.workspace = true
conn_pool = { workspace = true, features = [ "python_extension" ] }
pgrust = { workspace = true, features = [ "python_extension" ] }
gel-http = { workspace = true, features = [ "python_extension" ] }
gel-jwt = { workspace = true, features = [ "python_extension" ] }

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
