[package]
name = "edbrust"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lint]
workspace = true

[features]
python_extension = ["pyo3/extension-module", "pyo3/serde"]

[dependencies]
pyo3 = { workspace = true, optional = true }
tokio.workspace = true

[dependencies.derive_more]
version = "1.0.0-beta.6"
features = ["full"]

[dev-dependencies]
pretty_assertions = "1.2.0"
test-log = { version = "0", features = ["trace"] }
anyhow = "1"
rstest = "0"
statrs = "0"
lru = "0"
byteorder = "1.5"
clap = "4"
clap_derive = "4"
hex-literal = "0.4"

[dev-dependencies.tokio]
version = "1"
features = ["test-util"]

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
