[package]
name = "edb-frontend"
version = "0.1.0"
edition = "2018"

[features]
python_extension = ["pyo3/extension-module", "pyo3/serde"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
pgrust = { path = "../pgrust" }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
h2 = "0.4.6"
tokio-openssl = "0.6.5"
openssl = "0.10"
http-body-util = "0.1.2"
tower-http = { version = "0.6.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
pin-project = "1"
futures = "0.3"
scopeguard = "1"
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
sha1 = "0.10.6"
base64 = "0.22.1"
jwt = { version = "0.16", features = ["openssl"] }
bytes = "1"
thiserror = "1"
hexdump = "0"

tracing = "0"
tracing-subscriber = "0"

[dev-dependencies]
rstest = "0.22.0"
test-log = { version = "0", features = ["trace"] }

[lib]
