[package]
name = "http"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, optional = true }
tokio.workspace = true
tracing = "0"
tracing-subscriber = "0"
reqwest = { version = "0.12", features = ["gzip", "deflate"] }
scopeguard = "1"

futures = "0"

[dependencies.derive_more]
version = "1.0.0"
features = ["full"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rstest = "0.23"

[lib]
crate-type = ["lib", "cdylib"]
name = "http"
path = "src/lib.rs"
